# agentctx

./: .gitignore  README.md  agentctx-core-plan.md  pyproject.toml
docs/superpowers/plans/: 2026-06-27-agentctx-core-v0.md
src/agentctx/: __init__.py  cli.py
src/agentctx/core/: __init__.py  audit.py  doctor.py  loader.py  models.py  renderer.py  resolver.py  sanitizer.py  server.py
tests/: conftest.py  test_cli.py  test_doctor.py  test_resolver.py
